WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
208772
[GPUP] Null-dereference crash in GPUProcessProxy::openGPUProcessConnection()
https://bugs.webkit.org/show_bug.cgi?id=208772
Summary
[GPUP] Null-dereference crash in GPUProcessProxy::openGPUProcessConnection()
Jer Noble
Reported
2020-03-07 14:50:12 PST
[GPUP] Null-dereference crash in GPUProcessProxy::openGPUProcessConnection()
Attachments
Patch
(2.34 KB, patch)
2020-03-07 14:54 PST
,
Jer Noble
mjs
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Jer Noble
Comment 1
2020-03-07 14:54:30 PST
Created
attachment 392899
[details]
Patch
Maciej Stachowiak
Comment 2
2020-03-07 20:18:31 PST
Comment on
attachment 392899
[details]
Patch Is it possible to write a test case for this?
Maciej Stachowiak
Comment 3
2020-03-07 20:22:53 PST
Comment on
attachment 392899
[details]
Patch r=me, please mention in the ChangeLog that. it's covered by existing tests.
Jer Noble
Comment 4
2020-03-08 10:42:03 PDT
Committed
r258107
: <
https://trac.webkit.org/changeset/258107
>
Radar WebKit Bug Importer
Comment 5
2020-03-08 10:43:16 PDT
<
rdar://problem/60202314
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug