Source/WebKit/UIProcess/GPU/GPUProcessProxy.cpp
@@ -190,9 +190,7 @@ void GPUProcessProxy::openGPUProcessConnection(ConnectionRequestIdentifier conne
         m_processesPendingVisibilityPropagationNotification.append(makeWeakPtr(webProcessProxy));
 #endif
 
-    auto& connection = *this->connection();
-
-    connection.sendWithAsyncReply(Messages::GPUProcess::CreateGPUConnectionToWebProcess { webProcessProxy.coreProcessIdentifier(), webProcessProxy.sessionID() }, [this, weakThis = makeWeakPtr(this), webProcessProxy = makeWeakPtr(webProcessProxy), connectionRequestIdentifier](auto&& connectionIdentifier) mutable {
+    sendWithAsyncReply(Messages::GPUProcess::CreateGPUConnectionToWebProcess { webProcessProxy.coreProcessIdentifier(), webProcessProxy.sessionID() }, [this, weakThis = makeWeakPtr(this), webProcessProxy = makeWeakPtr(webProcessProxy), connectionRequestIdentifier](auto&& connectionIdentifier) mutable {
         if (!weakThis)
             return;
 
